welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: reassignment to val
	nbPas = nbPas + 1;
              ^Program:8: error: reassignment to val
		nbPas = nbPas - 1;
                      ^Program:11: error: reassignment to val
		if (nbPas=0)
                         ^