welcome.lessons.welcome.loopfor.LoopFor.scala.code
for(nbPas<- 0 to 6){
	avance();
	nbPas = nbPas + 1;
	if(estSurBiscuit){
		prendBiscuit();
		recule();
		nbPas = nbPas - 1;
		if (nbPas!=0)
		recule();
		if (nbPas=0)
		poseBiscuit();
	}
}
